[gd_scene load_steps=3 format=3 uid="uid://lk45t2m4kupr"]

[ext_resource type="Script" uid="uid://d1il1t7ymfquk" path="res://scenes/cards/shop_card.gd" id="1_78vjx"]
[ext_resource type="PackedScene" uid="uid://dvxlpi73wqwec" path="res://scenes/cards/card.tscn" id="2_1wi2t"]

[node name="ShopCard" type="Control"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_78vjx")

[node name="Card" parent="." instance=ExtResource("2_1wi2t")]

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 226.0
offset_right = 256.0
offset_bottom = 416.0
theme_override_constants/separation = 10

[node name="UpgradeButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade"

[node name="BuyButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
